fixed scrollbar, lot of other changes, fixed chart

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -22,3 +22,19 @@
     overflow: hidden;
     background-color: black; /* Prevent overflow */
 }
+@layer utilities {
+    .scrollbar::-webkit-scrollbar {
+      width: 2.5px;
+      height: 20px;
+    }
+  
+    .scrollbar::-webkit-scrollbar-track {
+      border-radius: 100vh;
+      background: transparent;
+    }
+  
+    .scrollbar::-webkit-scrollbar-thumb {
+      border-radius: 100vh;
+      border: 3px solid #7646d03c;
+    }
+  }
